ui/ui-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: MYNAMESPACE # CHANGEME
  labels:
    app: ui
    group: pks-workshop
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: ui
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: MYNAMESPACE # CHANGEME
  labels:
    app: api
    group: pks-workshop
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: MYNAMESPACE # CHANGEME
  labels:
    app: ui
    group: pks-workshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: voor/pks-workshop-ui:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: MYNAMESPACE # CHANGEME
  labels:
    app: api
    group: pks-workshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: backend
          image: voor/pks-workshop-api:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/
              port: http
          readinessProbe:
            httpGet:
              path: /api/
              port: http
