ui/ui-pod.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-pod-svc
  namespace: MYNAMESPACE # CHANGEME
  labels:
    app: ui-pod
    group: pks-workshop
spec:
  ports:
    - port: 80
      targetPort: 3000
      name: ui
    - port: 8080
      name: backend
    - port: 6379
      name: redis
  type: LoadBalancer
  selector:
    app: ui-pod
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: ui-pod
    group: pks-workshop
  name: ui-pod
spec:
  containers:
    - image: voor/pks-workshop-ui:latest
      name: ui
      ports:
        - containerPort: 3000
    - image: voor/pks-workshop-api:latest
      name: backend
      ports:
        - containerPort: 8080
    - image: redis
      name: redis
      ports:
        - containerPort: 6379
